--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       The Sparks Foundation 
     </h1> 
     <nav>
+      <img src="logo.jpg"alt="logo">
       <div class="menu">
       <a href="https://www.thesparksfoundationsingapore.org/">Home</a>
       <a href="https://www.thesparksfoundationsingapore.org/programs/student-scholarship-program/">Programs</a>
