--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       The Sparks Foundation 
     </h1> 
     <nav>
+      <div class="logo">
       <img src="logo.jpeg"alt="logo">
+      </div>
       <div class="menu">
       <a href="https://www.thesparksfoundationsingapore.org/">Home</a>
       <a href="https://www.thesparksfoundationsingapore.org/programs/student-scholarship-program/">Programs</a>
