--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
    <meta charset="UTF-8">
-   <meta name="viewport"content="width=device-width,initial-scale=1.0"> 
+   <meta name="viewport"content="width=device-width,initial-scale=1.0">
+   <link rel="icon"href="favicon.png"type="image/png"sizes="15*15> 
     <title>
   Save Children
     </title>
