--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </h1> 
     <nav>
       <div class="logo">
-      <img src="logo.jpeg"alt="logo">
+      <img src="logo.jpeg"type="image/jpeg"sizes="20*20"alt="logo">
       </div>
       <div class="menu">
       <a href="https://www.thesparksfoundationsingapore.org/">Home</a>
