--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
    <meta charset="UTF-8">
    <meta name="viewport"content="width=device-width,initial-scale=1.0">
    <link rel="icon"href="favicon.png"type="image/png"sizes="15*15> 
     <title>
-  Save Children
+  Save Children with Education
     </title>
   </head>
+  <body>                                                          
     <h1>
       The Sparks Foundation 
     </h1> 
@@ -29,8 +31,9 @@
 data-payment_button_id = "pl_FNmjTJSGXBYIfp"
 data-button_text = "Donate"
 data-button_theme = "brand-color">
-</script>
+</script>                                 
 </form>
+                                 </body>                                 
 </main>
       </html>      
 
