--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donation for kids</title>
     <link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet"type="text/css" href="styles.css">
 </head>
 <body>  
     <header>
