--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
                <main>
                    <section>
                        <h3>Welcome To The Family of giving!</h3>
-                       <h2>We are so glad to have you here! <span class="change_content"> </span></h2>
+                       <h2>Your small contribution can change someone's life <span class="change_content"> </span></h2>
+        <form>
+<script src = "https://cdn.razorpay.com/static/widget/payment-button.js"
+data-payment_button_id = "pl_FNmjTJSGXBYIfp"
+data-button_text = "Donate"
+data-button_theme = "brand-color">
+</script>
+</form>
                           <a href="https://rzp.io/l/ooqHjM7" class="btntwo">Donate Now</a>
                    </ section>
                </main> 
