--- a/index.html
+++ b/index.html
@@ -21,19 +21,14 @@
             </nav> 
                <main>
                    <section>
-                       <h3>Welcome To The Family of giving!</h3>
+                       <h3>Welcome To The Family of Educators who love giving education for free</h3>
                        <h2>Your small contribution can change someone's life <span class="change_content"> </span></h2>
                           <a href="https://rzp.io/l/ooqHjM7" class="btntwo">Donate Now</a>
                    </ section>
-               </main> 
-        
-           
+               </main>       
     </header>
-  
-
 </body>
-</html>
-                                 </body>                                 
+</html>                                                           
 </main>
       </html>      
 
