--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                    <section>
                        <h3>Welcome To The Family of Educators who love giving education for free</h3>
                        <h2>Your small contribution can change someone's life <span class="change_content"> </span></h2>
-                          <a href="<div class="razorpay-embed-btn" data-url="https://pages.razorpay.com/pl_HdudGpwPLX26kz/view" data-text="Pay Now" data-color="#528FF0" data-size="large">
+                          <a href="<div class="razorpay-embed-btn" data-url="https://pages.razorpay.com/pl_HdudGpwPLX26kz/view" data-text="Pay Now" data-color="#528FF0" data-size="large"/>Donate now </a>
   <script>
     (function(){
       var d=document; var x=!d.getElementById('razorpay-embed-btn-js')
@@ -31,10 +31,9 @@
       s.src='https://cdn.razorpay.com/static/embed_btn/bundle.js';d.body.appendChild(s);} else{var rzp=window['__rzp__'];
       rzp && rzp.init && rzp.init()}})();
   </script>
-</div>
-Donate Now</a>
-                   </ section>
-               </main>       
+</div> </a>
+</ section>
+</main>       
     </header>
 </body>
 </html>                                                           
