--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
                    <section>
                        <h3>Welcome To The Family of Educators who love giving education for free</h3>
                        <h2>Your small contribution can change someone's life <span class="change_content"> </span></h2>
-                     <h2><button>Donate Now </button></h1>
+                       <div class="razorpay-embed-btn" data-url="https://pages.razorpay.com/pl_HdudGpwPLX26kz/view" data-text="Donate Now" data-color="#528FF0" data-size="large">
+  <script>
+    (function(){
+      var d=document; var x=!d.getElementById('razorpay-embed-btn-js')
+      if(x){ var s=d.createElement('script'); s.defer=!0;s.id='razorpay-embed-btn-js';
+      s.src='https://cdn.razorpay.com/static/embed_btn/bundle.js';d.body.appendChild(s);} else{var rzp=window['__rzp__'];
+      rzp && rzp.init && rzp.init()}})();
+  </script>
+</div>
+    
 </ section>
 </main>       
     </header>
