--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                    <section>
                        <h3>Welcome To The Family of Educators who love giving education for free</h3>
                        <h2>Your small contribution can change someone's life <span class="change_content"> </span></h2>
+                     <button>
                        <div class="razorpay-embed-btn" data-url="https://pages.razorpay.com/pl_HdudGpwPLX26kz/view" data-text="Donate Now" data-color="#528FF0" data-size="large"
-</div>    
+                            </button></div>    
 </ section>
 </main>       
 </header>
