--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                    <section>
                        <h3>Welcome To The Family of Educators who love giving education for free</h3>
                        <h2>Your small contribution can change someone's life <span class="change_content"> </span></h2>
-                     <a href="https://pages.razorpay.com/pl_HdudGpwPLX26kz/view">Donate</a>
+                     <a href="https://pages.razorpay.com/pl_HdudGpwPLX26kz/view">
+                     <img src="logo.jpeg" alt="Donate"style="width:40px;height:40px;"> 
+                     </a>  
 </ section>
 </main>       
 </header>
