--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donation for kids education</title>
+    <title>The Sparks Foundation /title>
     <link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
 <link rel="stylesheet"type="text/css" href="styles.css">
 </head>
