--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
                        <h2>Your small contribution can change someone's life <span class="change_content"> </span></h2>
                      <a href="https://pages.razorpay.com/pl_HdudGpwPLX26kz/view">
                      <img src="logo.jpeg" alt="Donate"style="width:75px;height:75px;"> 
-                     </a>  
+            
+                    </a>  
 </ section>
+<footer>
+  Made in ♥ by Jasper Samuel
+  connect with him 
+  <a href="https://www.linkedin.com/in/jaspersamuelj/">LinkedIn </a>
+  <a href="https://www.behance.net/jaspersamuel">Behance </a>
 </main>       
 </header>
 </body>
