--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
                        <h3>Welcome To The Family of Educators who love giving education for free</h3>
                        <h2>Your small contribution can change someone's life <span class="change_content"> </span></h2>
                      <a href="https://pages.razorpay.com/pl_HdudGpwPLX26kz/view">
-                     <img src="logo.jpeg" alt="Donate"style="width:75px;height:75px;"> 
-            
+                     <img src="logo.jpeg" alt="Donate"style="width:75px;height:75px;">
                     </a>  
 </ section>
+                    <p>
+                      The sparks foundation is doing education reformation by providing internships to many students <br> 
+                      who are very much interested in learning more about techntechnology <br>
+                      almost all the companies in the world have at least one intern from sparks foundation 
+                 </p>  
 <footer>
   Made in ♥ by Jasper Samuel
   connect with him 
