--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </ section>
                     <p>
                       The sparks foundation is doing education reformation by providing internships to many students <br> 
-                      who are very much interested in learning more about techntechnology <br>
+                      who are very much interested in learning more about technology <br>
                       almost all the companies in the world have at least one intern from sparks foundation 
                  </p>  
 <footer>
